--- a/src/theme.styl
+++ b/src/theme.styl
@@ -1,5 +1,5 @@
 @require "~cube-ui/src/common/stylus/var/color.styl"
-
+@import "./common/stylus/variable.styl"
 
 // action-sheet
 $action-sheet-color := $color-grey
@@ -218,5 +218,5 @@ $image-preview-counter-color := $color-white
 
 // tab-bar & tab-panel
 $tab-color := $color-grey
-$tab-active-color := $color-dark-orange
-$tab-slider-bgc := $color-dark-orange
+$tab-active-color = $color-red
+$tab-slider-bgc = $color-red
